fixed spacing issues in catalog line items

--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -13,6 +13,7 @@
     margin-top: 1em;
     border-bottom: 1px dotted #77d;
     min-height: 100px;
+    padding-bottom: 0.5em;
 
     img {
       width: 80px;
